Fixed landing page main img position on mobile devices

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1259,6 +1259,10 @@ a {
     top: -5rem;
   }
 
+  .sm\:top-1\/3 {
+    top: 33.333333%;
+  }
+
   .sm\:mt-16 {
     margin-top: 4rem;
   }
@@ -1319,9 +1323,18 @@ a {
   .sm\:leading-loose {
     line-height: 2;
   }
+
+  .sm\:text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+  }
 }
 
 @media (min-width: 768px) {
+  .md\:top-1\/3 {
+    top: 33.333333%;
+  }
+
   .md\:col-start-2 {
     grid-column-start: 2;
   }
@@ -1445,6 +1458,11 @@ a {
 
   .md\:leading-loose {
     line-height: 2;
+  }
+
+  .md\:text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
   }
 }
 
